# fit-mail

./: CHANGELOG.md  README.md  main.py  pyproject.toml
fit_mail/: mail.py  mail_service.py  mail_ui.py
fit_mail/lang/: en.json  it.json
fit_mail/tasks/: save_messages.py
fit_mail/ui/: mail.ui
fit_mail/workers/: login.py  logout.py  search.py
pyinstaller/hooks/: hook-fit_mail.py
pyinstaller/linux/: build-linux-portable.sh  fit-onefile.spec
pyinstaller/macos/: fit-onefile.spec
pyinstaller/windows/: fit-onefile.spec
